# applalabank

./: .replit  app.py  dashboard_calculations.py  database.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  utils.py
static/js/: webhook-test.js
templates/: dashboard.html  index.html  login.html  user_selection.html
